removed overflow property to see if that fixes sticky error

--- a/styles.css
+++ b/styles.css
@@ -25,7 +25,6 @@ body {
     width: 100%;
     margin: 0;
 	padding: 0;
-	overflow-x: hidden;
     background-color: var(--bgcolor);
 	background-image: url("./images/100_4079F.jpg");
 	background-size: cover;
